@@ -275,7 +275,7 @@ Affiliation: Hewlett-Packard.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00009.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00009.html</a>
 </P>
 
-<P>13. LESLIE PROCTOR<br />
+<P>14. LESLIE PROCTOR<br />
 &quot;
 I'd like to more closely tie GNOME marketing
 with the Foundation Board, and being part of the board
@@ -285,14 +285,14 @@ Affiliation: GNOME Foundation.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00010.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00010.html</a>
 </P>
 
-<P>14. NAT FRIEDMAN<br />
+<P>15. NAT FRIEDMAN<br />
 &quot;
 &quot;<br />
 Affiliation: Ximian.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00011.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00011.html</a>
 </P>
 
-<P>15. JONATHAN BLANDFORD<br />
+<P>16. JONATHAN BLANDFORD<br />
 &quot;
 I started working on GNOME in 1997, and have been actively a part of it
 since.  I initially wrote the AisleRiot solitaire program which appeared
@@ -306,7 +306,7 @@ Affiliation: Red Hat.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00013.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00013.html</a>
 </P>
 
-<P>16. JODY GOLDBERG<br />
+<P>17. JODY GOLDBERG<br />
 &quot;
 Who :<br />
 &nbsp;&nbsp;- Jody Goldberg<br />
@@ -323,7 +323,7 @@ Affiliation: Ximian.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00014.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00014.html</a>
 </P>
 
-<P>17. TIM NEY<br />
+<P>18. TIM NEY<br />
 &quot;
 GNOME Foundation needs the combined efforts of hackers and non-hackers.
 Since I first worked with GNOME four years ago, getting machines and
@@ -339,7 +339,7 @@ Affiliation: GNOME Foundation.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00015.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00015.html</a>
 </P>
 
-<P>18. LUIS VILLA<br />
+<P>19. LUIS VILLA<br />
 &quot;
 I want to get involved with the board for three reasons. First, to
 improve communications between the board and /all/ volunteers,
@@ -353,7 +353,7 @@ Affiliation: Ximian.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00017.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00017.html</a>
 </P>
 
-<P>19. AMY KAHN<br />
+<P>20. AMY KAHN<br />
 &quot;
 I, Amy Kahn, am running for election for the Gnome Foundation Board on the 
 following platform:
@@ -370,7 +370,7 @@ Affiliation: GNOME Foundation.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00018.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00018.html</a>
 </P>
 
-<P>20. MARTIN BAULIG<br />
+<P>21. MARTIN BAULIG<br />
 &quot;
 I've been hacking on GNOME almost since its early beginnings.  However,
 about a year ago I took a longer break to concentrate more on
@@ -387,7 +387,7 @@ Affiliation: Ximian.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00019.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00019.html</a>
 </P>
 
-<P>21. SRI RAMKRISHNA<br />
+<P>22. SRI RAMKRISHNA<br />
 &quot;
 I'm running for the GNOME Foundation board in order to help GNOME and in
 the process better myself by making GNOME problems, my problems.
@@ -403,7 +403,7 @@ Affiliation: Intel.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00020.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00020.html</a>
 </P>
 
-<P>22. FEDERICO MENA QUINTERO<br />
+<P>23. FEDERICO MENA QUINTERO<br />
 &quot;
 We lack complete developer's documentation for our 2.0 platform.  The
 documentation I have written in the past has been useful to people, so I
